pgadmin-deployment.yaml
# pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: admin
    component: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
      component: pgadmin
  template:
    metadata:
      labels:
        app: admin
        component: pgadmin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: pgadmin-container
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-data
        emptyDir: {}
      dnsPolicy: "ClusterFirst"  # Используем DNS кластера
